# Robot-Palletizer-Tycoon

./: App.cpp  App.h  CMakeLists.txt  Device.cpp  Device.h  Game.cpp  Game.h  Game.hpp  LinkedList.h  Listener.cpp  Listener.h  README.md  Serial.h  UI.cpp  UI.h  Visualization.hpp  kandidater.txt  main.cpp  vcpkg.json
.github/workflows/: config.yml
RobotArm/: IK.cpp  IK.h  Joint.h  Robot.cpp  Robot.h
helpers/: Helper.cpp  Helper.h  LinkedList.h
include/: Game.hpp  Visualization.hpp
include/helpers/: Helper.hpp  LinkedList.hpp
include/listener/: Listener.hpp
include/objects/: ConveyorBelt.hpp  EuroPallet.hpp
include/objects/items/: Box.hpp  DiamondBlock.hpp  EmeraldBlock.hpp  GoldBlock.hpp  IronBlock.hpp  Item.hpp  ItemGenerator.hpp  Items.hpp
include/robot_arm/: Joint.hpp  Robot.hpp
include/robot_arm/tools/: IK.hpp  PID.hpp  Program.hpp
include/serial_communication/: Device.hpp  Serial.hpp
include/ui/: UI.hpp  UpgradeUI.hpp  VizUI.hpp
objects/: ConveyorBelt.cpp  ConveyorBelt.h  EuroPallet.cpp  EuroPallet.h
objects/items/: Box.cpp  Box.h  Item.cpp  Item.h
resources/models/: control_text.stl  conveyor_belt.stl  conveyor_legs.stl  conveyor_main.stl  euro_pallet.stl  j1_very_simplified.stl  j2_very_simplified2.stl  j2_very_simplified_logo.stl  j4_very_simplified_logo.stl  j6_simplified.stl  pallet_jack.stl  servo_gripper_simplified.stl  visualize_text.stl
resources/models/stl/: j2_very_simplified.stl  j3_very_simplified.stl
robot_arm/: IK.cpp  IK.h  Joint.cpp  Joint.h  Robot.cpp  Robot.h
robot_arm/tools/: IK.cpp  IK.h  PID.h  Program.cpp  Program.h
serial_communication/: Serial.cpp  Serial.h
src/: Game.cpp  Visualization.cpp
src/helpers/: Helper.cpp
src/listener/: Listener.cpp
src/objects/: ConveyorBelt.cpp  EuroPallet.cpp
src/objects/items/: Box.cpp  Item.cpp
src/robot_arm/: Joint.cpp  Robot.cpp
src/robot_arm/tools/: IK.cpp  Program.cpp
src/serial_communication/: Device.cpp  Serial.cpp
src/ui/: UI.cpp  UpgradeUI.cpp  VizUI.cpp
tests/: CMakeLists.txt  test_conveyor.cpp  test_robot.cpp  test_serial_connection.cpp
